--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="giraffe">Giraffe</string>
     <string name="correct">Correct!</string>
     <string name="incorrect">Incorrect, the correct answer is Giraffe!</string>
+    <string name="image">image</string>
+    <string name="give_an_animal_name">Give an animal name</string>
 </resources>
